--- a/resources/styles.css
+++ b/resources/styles.css
@@ -287,6 +287,7 @@ iframe {
   padding-bottom: 5px;
   width: 100%;
   display: block;
+  text-decoration: none;
 }
 .footer-container a:hover {
   color: var(--darker-blue);
