--- a/resources/styles.css
+++ b/resources/styles.css
@@ -29,6 +29,14 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--cream) !important;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+.nav-item h1 {
+  font-family: "Old-Fashioned-Script";
+  font-size: 150px;
+  line-height: 0.7;
+  color: var(--navy);
 }
 .navbar {
   background-color: var(--light-blue);
@@ -38,7 +46,7 @@ body {
   top: 0;
   left: 0;
   right: 0;
-  height: 100vh;
+  min-height: 110vh;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -117,7 +125,7 @@ body {
 
 /* Landing Section*/
 #landing .landing-container {
-  height: 100vh;
+  min-height: 80vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -146,7 +154,7 @@ body {
   align-items: center;
   padding-right: 6rem;
   padding-left: 6rem;
-  height: 75vh;
+  min-height: 75vh;
 }
 #about .about-container .left-col img {
   border-radius: 10px;
@@ -177,7 +185,7 @@ body {
   padding-top: 2rem;
   padding-right: 10rem;
   padding-left: 10rem;
-  height: 75vh;
+  min-height: 50vh;
 }
 #favorites .favorites-container .favorite-desserts {
   display: flex;
@@ -238,7 +246,7 @@ body {
   justify-content: center;
   padding-right: 10rem;
   padding-left: 10rem;
-  height: 75vh;
+  min-height: 75vh;
   color: var(--navy);
 }
 iframe {
@@ -315,22 +323,20 @@ iframe {
   color: var(--cream);
 }
 
-/* Responsive Alternations */
-@media (max-width: 768px) {
+/* Responsive Alternations for Tablet */
+@media (max-width: 800px) {
   /* General*/
-  .navbar {
-    border: solid;
-    border-width: 5px;
-    border-color: var(--light-blue);
+  .nav-item h1 {
+    font-size: 100px;
   }
   .body-text {
-    font-size: 12px;
+    font-size: 15px;
   }
   .section-title {
     font-size: 50px;
   }
   .subtext {
-    font-size: 15px;
+    font-size: 18px;
   }
   .left-col {
     justify-content: center;
@@ -361,14 +367,14 @@ iframe {
     align-items: center;
     padding-right: 2rem;
     padding-left: 2rem;
-    height: 100vh;
+    min-height: 80vh;
   }
 
   /* Favorites Section*/
   #favorites .favorites-container {
     padding-right: 2rem;
     padding-left: 2rem;
-    height: 75vh;
+    min-height: 75vh;
   }
   #favorites .favorites-container .favorite-desserts {
     display: none;
@@ -383,7 +389,7 @@ iframe {
   }
 
   #carouselFavorites {
-    width: 70%;
+    width: 90%;
   }
 
   /* .favorites-container .active.carousel-item-start {
@@ -394,21 +400,16 @@ iframe {
   }
   .favorites-container .carousel-item {
     transition: none !important;
-  }
+  }*/
 
   .carousel-control-prev {
     opacity: 1 !important;
     color: transparent !important;
-    width: 0% !important;
-    z-index: 0 !important;
-    left: 0 !important;
   }
   .carousel-control-next {
     opacity: 1 !important;
     color: transparent !important;
-    width: 0% !important;
-    z-index: 0 !important;
-  } */
+  }
 
   /* Contact Section*/
   #contact .contact-container {
@@ -417,7 +418,138 @@ iframe {
     justify-content: center;
     padding-right: 2rem;
     padding-left: 2rem;
-    height: 100vh;
+    min-height: 65vh;
+  }
+  #contact .contact-container li {
+    list-style: none;
+  }
+  iframe {
+    border-radius: 10px;
+    width: 600px;
+    height: 328px;
+    border: 0;
+  }
+
+  /* Footer Section*/
+  #footer .footer-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+  }
+  .footer-container .logo-container,
+  .footer-container .footer-info {
+    width: 90%;
+    margin-bottom: 15px;
+  }
+  .footer-container .logo-container img {
+    margin-top: 30px;
+    width: 100px;
+    height: auto;
+    float: right;
+  }
+  #favorites .favorites-container {
+    min-height: 50vh;
+  }
+}
+
+/* Responsive Alternations for Phone */
+@media (max-width: 667px) {
+  /* General*/
+  .nav-item h1 {
+    font-size: 100px;
+  }
+  .body-text {
+    font-size: 13px;
+  }
+  .section-title {
+    font-size: 50px;
+  }
+  .subtext {
+    font-size: 12px;
+  }
+  .left-col {
+    justify-content: center;
+    align-items: center;
+    padding-right: 0;
+    padding-left: 0;
+  }
+  .right-col {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+    text-align: center;
+  }
+
+  /* Landing Section*/
+  #landing .landing-container img {
+    width: 100px;
+    height: 100px;
+  }
+  #landing .landing-container h1 {
+    font-size: 90px;
+  }
+  #landing .landing-container h2 {
+    font-size: 25px;
+  }
+  #about .about-container {
+    display: flex;
+    flex-direction: column;
+    align-items: space-evenly;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    min-height: 120vh;
+  }
+
+  /* Favorites Section*/
+  #favorites .favorites-container {
+    padding-right: 2rem;
+    padding-left: 2rem;
+    min-height: 75vh;
+  }
+  #favorites .favorites-container .favorite-desserts {
+    display: none;
+  }
+  #favorites img {
+    width: auto;
+    height: auto;
+    height: 220px;
+  }
+  #carouselFavorites {
+    display: inline-block;
+  }
+
+  #carouselFavorites {
+    width: 90%;
+  }
+
+  /* .favorites-container .active.carousel-item-start {
+    transition: none !important;
+  }
+  .favorites-container .active.carousel-item-end {
+    transition: none !important;
+  }
+  .favorites-container .carousel-item {
+    transition: none !important;
+  }*/
+
+  .carousel-control-prev {
+    opacity: 1 !important;
+    color: transparent !important;
+  }
+  .carousel-control-next {
+    opacity: 1 !important;
+    color: transparent !important;
+  }
+
+  /* Contact Section*/
+  #contact .contact-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-right: 2rem;
+    padding-left: 2rem;
+    min-height: 100vh;
   }
   #contact .contact-container li {
     list-style: none;
@@ -447,5 +579,74 @@ iframe {
     width: 100px;
     height: auto;
     float: right;
+  }
+}
+
+@media (min-width: 3000px) {
+  /* Layout and Container Widths */
+  .about-container,
+  .favorites-container,
+  .contact-container {
+    max-width: 2500px; /* Adjust the maximum width as needed */
+    margin: 0 auto; /* Center the containers horizontally */
+  }
+  #landing .landing-container h1 {
+    font-size: 300px;
+  }
+  #landing .landing-container img {
+    width: 300px;
+    height: 300px;
+  }
+  #landing .landing-container h2 {
+    font-size: 80px;
+  }
+  .subtext {
+    font-size: 75px; /* Increase the font size for subtext */
+  }
+  .section-title {
+    font-size: 300px; /* Increase the font size for section titles */
+  }
+  .body-text {
+    font-size: 50px;
+  }
+  #favorites img {
+    height: 600px;
+  }
+  .about-container {
+    padding-right: 12rem;
+    padding-left: 12rem;
+  }
+  .favorites-container {
+    padding-right: 0rem;
+    padding-left: 0rem;
+  }
+  .contact-container {
+    padding-right: 12rem;
+    padding-left: 12rem;
+  }
+  .nav-item h1 {
+    font-size: 200px;
+  }
+  .navbar-text {
+    font-size: 50px;
+  }
+  iframe {
+    border-radius: 10px;
+    width: 1500px;
+    height: 900px;
+    border: 0;
+  }
+  #favorites button {
+    font-size: 75px;
+    padding: 40px 60px;
+    border-radius: 40px;
+  }
+  .footer-container .footer-info .fa-twitter,
+  .footer-container .footer-info .fa-instagram,
+  .footer-container .footer-info .fa-facebook {
+    font-size: 70px; /* Increase the font size as needed */
+  }
+  .fa-bars {
+    font-size: 100px;
   }
 }
